classDiagram
    class User {
        +id : bigint
        +name : string
        +email : string
        +password : string
        +google_id : string?
        +avatar : string?
        +dino_high_score : int
        +email_verified_at : timestamp?
        +timestamps()
    }classDiagram
    class User {
        +id : bigint
        +name : string
        +email : string
        +password : string
        +google_id : string?
        +avatar : string?
        +dino_high_score : int
        +email_verified_at : timestamp?
        +timestamps()
    }

    class Game {
        +id : bigint
        +name : string
        +description : text?
        +cover_image : string?
        +is_visible : boolean
        +timestamps()
    }

    class Store {
        +id : bigint
        +name : string
        +timestamps()
    }

    class GamePrice {
        +id : bigint
        +game_id : bigint (FK)
        +store_id : bigint (FK)
        +price : decimal
        +url_link : string
        +timestamps()
    }

    class Genre {
        +id : bigint
        +name : string
        +timestamps()
    }

    class Wishlist {
        +user_id : bigint (FK)
        +game_id : bigint (FK)
        +timestamps()
    }

    class GameGenre {
        +game_id : bigint (FK)
        +genre_id : bigint (FK)
    }

    %% Relaciones
    User "1" -- "*" Wishlist : tiene en
    Game "1" -- "*" Wishlist : aparece en
    Game "1" -- "*" GamePrice : tiene
    Store "1" -- "*" GamePrice : ofrece
    Game "1" -- "*" GameGenre : se clasifica en
    Genre "1" -- "*" GameGenre : contiene

    %% Relaciones Lógicas (Muchos a Muchos)
    User "*" -- "*" Game : Wishlist
    Game "*" -- "*" Genre : GameGenre


    class Game {
        +id : bigint
        +name : string
        +description : text?
        +cover_image : string?
        +is_visible : boolean
        +timestamps()
    }

    class Store {
        +id : bigint
        +name : string
        +timestamps()
    }

    class GamePrice {
        +id : bigint
        +game_id : bigint (FK)
        +store_id : bigint (FK)
        +price : decimal
        +url_link : string
        +timestamps()
    }

    class Genre {
        +id : bigint
        +name : string
        +timestamps()
    }

    class Wishlist {
        +user_id : bigint (FK)
        +game_id : bigint (FK)
        +timestamps()
    }

    class GameGenre {
        +game_id : bigint (FK)
        +genre_id : bigint (FK)
    }

    %% Relaciones
    User "1" -- "*" Wishlist : tiene en
    Game "1" -- "*" Wishlist : aparece en
    Game "1" -- "*" GamePrice : tiene
    Store "1" -- "*" GamePrice : ofrece
    Game "1" -- "*" GameGenre : se clasifica en
    Genre "1" -- "*" GameGenre : contiene

    %% Relaciones Lógicas (Muchos a Muchos)
    User "*" -- "*" Game : Wishlist
    Game "*" -- "*" Genre : GameGenre
